# version 0.63

# version 0.62.4
24/01/2020
   - Removed salt from config and updated config files.
05/02/2020
   - Added welcome page.
11/05/2020
   - Added tool to create VC from list (diewald)
29/05/2020
   - Improved conversion tool to deal with Cosmas-II VC definitions
     (diewald)
02/06/2020
   - Introduced experimental X-Index-Revision header (diewald)

# version 0.62.3
03/12/2019
   - Implemented pipe extension in the search API (margaretha)
11/12/2019
   - Added errors when requesting VC in caching process (margaretha, 
     resolved #47) 
12/12/2019
   - Added support for multiple cq parameters (margaretha, resolved #46)
13/12/2019
   - Handled pipe errors and added tests (margaretha)   
20/12/2019
   - Removed transactional annotations from simple select queries (margaretha)   

# version 0.62.2
13/11/2019
   - Added warnings when requesting non-public fields via the search API with 
     accessRewriteDisabled (margaretha, resolved #43).
14/11/2019
   - Added a check for OAuth2 client, VC, and group name length (margaretha)
22/11/2019
   - Updated the statistic API with KoralQuery (margaretha)

# version 0.62.1
08/07/2019
   - Added support for public metadata response in search api (margaretha, 
     issue #43)
   - Disabled some unused web-services: search post, query serialization, 
     collocation base (margaretha)
11/07/2019
   - Added cq parameter to VC statistics API and deprecate corpusQuery (margaretha)
15/07/2019
   - Added backward compatibility support for corpusQuery parameter (margaretha)
28/08/2019
   - Resolved #49. Added page param check in the search api (margaretha)
23/09/2019   
   - Resolved #50. Added statistics API with KoralQuery input (margaretha)
   

# version 0.62
18/03/2019
   - Added close index controller (margaretha)
11/04/2019
   - Fixed multiple Jackson implementations (margaretha)
25/04/2019
   - Updated Jetty version due to vulnerabilities (margaretha)
27/06/2019